# TSAgent

./: .gitignore  README.md  environment.yml  pyproject.toml
artifacts/models/: learned_router.pkl  learned_router_metrics.json  region_weight_priors.json  validation_residuals.json
artifacts/processed/: daily_event_features.csv  news_event_records.jsonl  weather_clean.csv  weather_proxy_forecasts.csv
artifacts/reports/: ablation_table.csv  backtest_predictions.csv  backtest_summary.json  experiment_report.md  holiday_breakdown.csv  monthly_breakdown.csv  peak_breakdown.csv  routing_summary.csv
configs/: default.yaml
src/aupower/: __init__.py  __main__.py  calendar_utils.py  cli.py  config.py  contracts.py  metrics.py  pipeline.py  utils.py
src/aupower/agent/: __init__.py  ollama_router.py
src/aupower/data/: dataset.py  load.py  news.py  weather.py
src/aupower/models/: baselines.py  experts.py
tests/: test_contracts.py  test_dataset_features.py  test_learned_router.py  test_load_pipeline.py  test_news_parser.py  test_report_generation.py
